--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "static-site",
+  "name": "readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "[How to create a Professional README](https://coding-boot-camp.github.io/full-stack/github/professional-readme-guide)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Olga Gavrushenko",
+  "license": "MIT",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+    "inquirer": "^8.2.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OlgaGav/command-line-readme-generator.git"
+  },
+  "keywords": [
+    "command-line",
+    "readme",
+    "generator"
+  ],
+  "bugs": {
+    "url": "https://github.com/OlgaGav/command-line-readme-generator/issues"
+  },
+  "homepage": "https://github.com/OlgaGav/command-line-readme-generator#readme"
 }
